--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
   "name": "@wy/tiny-utils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "description": "",
   "exports": {
-     ".": "./dist/index.js",
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "types": "./dist/index.d.ts",
   "sideEffects": false,
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
     "test": "vitest",
     "prepublishOnly": "npm run build"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
   "dependencies": {},
-  "keywords": ["utils", "esm", "tiny"],
+  "keywords": [
+    "utils",
+    "esm",
+    "tiny"
+  ],
   "author": "Wang Yang",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1"
