feat: 更新包名为 @wyangx/tiny-utils，添加 LICENSE 文件和 README 文档

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wy/tiny-utils",
+  "name": "@wyangx/tiny-utils",
   "version": "0.0.2",
   "type": "module",
   "description": "",
@@ -31,6 +31,9 @@
     "tiny"
   ],
   "author": "Wang Yang",
-  "license": "ISC",
-  "packageManager": "pnpm@10.13.1"
+  "license": "MIT",
+  "packageManager": "pnpm@10.13.1",
+  "publishConfig": {
+    "access": "public"
+  }
 }
