chore: 移除 CI 徽章并更新 package.json 中的 repository 和 bugs 字段

--- a/package.json
+++ b/package.json
@@ -35,5 +35,12 @@
   "packageManager": "pnpm@10.13.1",
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wyangx/tiny-utils.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wyangx/tiny-utils/issues"
   }
 }
