--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
+    "happy-dom": "^18.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
-  "dependencies": {},
   "keywords": [
     "utils",
     "esm",
