--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
+    "glob": "^11.0.3",
     "happy-dom": "^18.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
